Removed the Python implemented English engine from source tree; replaced all "tmpl" with "icelandic" in the core part.
commit 253c322b20bf909386224da394ffe19322da327e
Author: Chenguang Wang <w3cing@gmail.com>
Date:   Sun Dec 4 20:55:03 2011 -0800

    removed the python English engine form source tree.

commit 94f0576f57b8100131d09b984dfdffd8f59a6d3e
Author: Chenguang Wang <w3cing@gmail.com>
Date:   Sun Dec 4 20:47:19 2011 -0800

    added missing ignoring rules; renamed ibus-tmpl.spec.in as ibus-icelandic.spec.in.

commit a6153e1e2d5bee748be45f03c6a813193b60f86b
Author: Chenguang Wang <w3cing@gmail.com>
Date:   Sun Dec 4 20:38:21 2011 -0800

    working version with correct info

commit 3355064a90d8e6d10e6aacab52f862c4af5cb735
Author: Chenguang Wang <w3cing@gmail.com>
Date:   Sun Dec 4 19:16:57 2011 -0800

    working version with wrong info

--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,14 @@ ltmain.sh
 missing
 stamp-h1
 py-compile
-ibus-tmpl*.tar.*
-ibus-tmpl.spec
+# ibus-tmpl*.tar.*
+# ibus-tmpl.spec
+ibus-icelandic*.tar.*
+ibus-icelandic.spec
+
+engine/enchant.engine
+engine/ibus-engine-enchant
+src/enchant.xml
+src/enchant.xml.in
+src/ibus-engine-enchant
+
